# sherlock

./: .env.example  .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.bat
.github/: CODEOWNERS  copilot-instructions.md
client/: __init__.py  newrelic.py
core/: __init__.py  account_memory.py  cache.py  context.py  credentials.py  deeplinks.py  dependency_graph.py  discovery.py  exceptions.py  graph_builder.py  intelligence.py  query_builder.py  report_template.py  sanitize.py  session_memory.py  structured_output.py  utils.py
profiles/: profiles.example.json
scripts/: cli.py  relearn.py  test_connection.py  test_deeplink.py  validate_connection.py
tests/: conftest.py  test_account_memory.py  test_alerts.py  test_apm.py  test_asb_intelligence.py  test_bug_fixes.py  test_context.py  test_credentials.py  test_deeplinks.py  test_dependencies_tool.py  test_dependency_graph.py  test_discovery.py  test_entities.py  test_frustration_detection.py  test_golden_signals.py  test_graph_builder.py  test_intelligence.py  test_intelligence_tools.py  test_investigate.py  test_k8s.py  test_k8s_multi_cluster.py  test_logs.py  test_nrql.py  test_platform_log_discovery.py  test_query_builder.py  test_recommendation_attribution.py  test_report_template.py  test_sanitize.py  test_session_memory.py  test_structured_output.py  test_synthetics.py
tools/: __init__.py  alerts.py  apm.py  dependencies.py  entities.py  golden_signals.py  intelligence_tools.py  investigate.py  k8s.py  logs.py  nrql.py  synthetics.py
(+16 files in other folders)
